# langchain-rs

./: .gitignore  AGENTS.md  ANALYSIS_QUICK_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.txt  CLAUDE.md  Cargo.toml
.claude/: settings.local.json
.github/workflows/: rust.yml
crates/langchain/: Cargo.toml
crates/langchain/examples/: agent_hitl.rs  agent_memory.rs  agent_openai.rs  agent_openai_stream.rs  agent_redis.rs  agent_sqlite.rs  agent_struct.rs
crates/langchain/src/: lib.rs
crates/langchain/src/node/: llm.rs
crates/langchain_core/: Cargo.toml
crates/langchain_core/macro/: Cargo.toml
crates/langchain_core/macro/src/: lib.rs
crates/langchain_core/src/: error.rs  lib.rs  message.rs  request.rs  response.rs  state.rs  store.rs  structured_output.rs
crates/langchain_core/src/parsers/: mod.rs
crates/langchain_core/src/state/: chat.rs  mod.rs  tool.rs
crates/langchain_core/src/store/: memory.rs
crates/langchain_openai/: Cargo.toml
crates/langchain_openai/src/: error.rs  lib.rs
crates/langchain_tools/: Cargo.toml  README.md
crates/langchain_tools/examples/: tools_demo.rs
crates/langchain_tools/src/: file.rs  lib.rs  util.rs  web.rs
crates/langgraph/: Cargo.toml  NOTE.MD  NOTE2.md
crates/langgraph-checkpoint-postgres/: Cargo.toml  README.md
crates/langgraph/macro/: Cargo.toml
crates/langgraph/macro/src/: lib.rs
crates/langgraph/src/: checkpoint.rs  edge.rs  event.rs  execution_mode.rs  executor.rs  graph.rs  hitl_node.rs  intern.rs  interrupt.rs  label.rs  label_registry.rs  lib.rs  node.rs  state_graph.rs
crates/langgraph/src/checkpoint/: checkpoint_instantiation.rs  checkpoint_memory_saver.rs  checkpoint_postgres_saver.rs  checkpoint_redis_saver.rs  checkpoint_sqlite_saver.rs  checkpoint_trait.rs  mod.rs
data/: checkoutpoint.db
langchain/: Cargo.toml
langchain-openai/src/: request.rs
langchain/examples/: sample.rs
langchain/macros/: Cargo.toml
langchain/macros/src/: lib.rs  tool.rs
langchain/src/: lib.rs
langchain/tests/: react_agent_integration.rs
langchain_core/: Cargo.toml
langchain_core/src/: lib.rs  message.rs  request.rs  response.rs  state.rs
langchain_openai/: Cargo.toml
langchain_openai/src/: error.rs  lib.rs  main.rs  message.rs  request.rs
langgraph/: Cargo.toml
langgraph/marcos/: Cargo.toml
langgraph/marcos/src/: lib.rs  tool.rs
langgraph/src/: edge.rs  graph.rs  graph_runner.rs  lib.rs  node.rs  node_slot.rs
