[workspace]
members = ["langchain_openai", "langchain_core", "langgraph", "langchain"]
resolver = "2"


[workspace.dependencies]
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = "1.48.0"
anyhow = "1.0.100"
thiserror = "2.0.17"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
