[package]
name = "langchain"
version = "0.1.0"
edition = "2024"

[dependencies]
langgraph = { path = "../langgraph" }
langchain_core = { path = "../langchain_core" }
langchain_macros = { path = "./macros" }
async-trait = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
futures = "0.3"
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
langchain_openai = { path = "../langchain_openai" }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
