[package]
name = "langchain_openai"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
langchain = { path = "../langchain" }
langchain_core = { path = "../langchain_core" }
futures = "0.3"
async-stream = "0.3"
