[package]
name = "langgraph"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = "0.17"
downcast-rs = "2.0.2"
variadics_please = "1.1"
thiserror = { workspace = true }
graph_marcos = { path = "./marcos" }
derive_more = "2.1.0"
smallvec = "1.15.1"
futures = "0.3"
async-trait = "0.1"
langchain_core = { path = "../langchain_core" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
