[package]
name = "langchain"
version = "0.1.0"
edition = "2024"

[dependencies]
langgraph = { path = "../langgraph" }
async-trait = { workspace = true }
langgraph_macro = { path = "../langgraph/macro" }
langchain_core = { path = "../langchain_core" }
serde = { workspace = true }
serde_json = { workspace = true }
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
langchain_core_macro = { path = "../langchain_core/macro" }
schemars = { workspace = true }
