[package]
name = "langchain"
version = "0.1.0"
edition = "2024"

[dependencies]
langgraph = { path = "../langgraph", features = ["sqlite"] }
async-trait = { workspace = true }
langgraph_macro = { path = "../langgraph/macro" }
langchain_core = { path = "../langchain_core" }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
async-stream = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }
schemars = { workspace = true }
langchain_openai = { path = "../langchain_openai" }


[lints]
workspace = true
