[package]
name = "langchain_core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures-core = "0.3"
schemars = { workspace = true }
thiserror = { workspace = true }
im = { workspace = true, features = ["serde"] }
langchain_core_macro = { path = "./macro" }

[lints]
workspace = true
