[package]
name = "langchain_core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures-core = { workspace = true }
schemars = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
im = { workspace = true, features = ["serde"] }
langchain_core_macro = { path = "./macro" }
tokio = { workspace = true, features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }
tracing = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }

[features]
default = []
regex = []

[lints]
workspace = true
