[package]
name = "langchain_openai"
version = "0.1.0"
edition = "2024"

[dependencies]
langchain_core = { path = "../langchain_core" }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
tracing = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
