[package]
name = "langchain-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
# langchain_core 依赖
langchain_core = { path = "../langchain_core" }

# 异步运行时
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }

# HTTP 客户端（用于 Web 搜索等）
reqwest = { workspace = true, features = ["json"] }

# 序列化
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
schemars = { workspace = true }

# URL 编码
urlencoding = "2.1"

# 错误处理
thiserror = { workspace = true }

# 日志
tracing = { workspace = true }

# 日期时间
chrono = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
anyhow = { workspace = true }
