[package]
name = "langgraph-checkpoint-postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
# langgraph 依赖
langgraph = { path = "../langgraph" }

# 异步运行时
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
async-trait = { workspace = true }

# 序列化
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# 数据库
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
] }

# 错误处理
thiserror = { workspace = true }
anyhow = { workspace = true }

# 日志
tracing = { workspace = true }

# 工具
chrono = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "test-util",
] }
