[package]
name = "langgraph"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
async-trait = { workspace = true }
downcast-rs = { workspace = true }
variadics_please = "1.1"
async-stream = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
langgraph_macro = { path = "./macro" }
tokio = { version = "1", features = ["macros", "rt", "sync"] }
smallvec = "1.15.1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
langchain_core = { path = "../langchain_core" }
uuid = { version = "1.0", features = ["v4", "serde"] }


[lints]
workspace = true
