[package]
name = "langgraph"
version = "0.1.0"
edition = "2024"

[features]
default = ["memory"]
full-checkpoint = ["memory", "sqlite", "postgres", "redis"]
memory = []
sqlite = []
postgres = []
redis = []

[dependencies]
thiserror = { workspace = true }
async-trait = { workspace = true }
downcast-rs = { workspace = true }
variadics_please = "1.1"
async-stream = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
langgraph_macro = { path = "./macro" }
tokio = { version = "1", features = ["macros", "rt", "sync"] }
smallvec = { workspace = true, features = ["serde", "write"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
langchain_core = { path = "../langchain_core" }
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }
chrono = "0.4.43"
# 数据库
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "postgres",
    "chrono",
    "uuid",
    "json",
] }
# Redis
redis = { version = "1", features = [
    "connection-manager",
    "aio",
    "tokio-comp",
    "json",
] }

[lints]
workspace = true
